# aoc_haskell

./: .ghci  .gitignore  advent-of-code.cabal  benchit.sh  cabal.project  cabal.project.local  flake.nix  ghcid.txt  history.txt  part1.sh  part1_example.sh  part2.sh  part2_example.sh  repl.sh  setup-git-hooks.sh  solve.sh
2020/: d1.hs
benchit/: Main.hs
git-hooks/: pre-commit
src/: AoC.hs
src/2020/: d1.hs  ghcid.txt
src/Y2015/: D1.hs  D2.hs  D3.hs  D4.hs  D5.hs
src/Y2016/: D1.hs  D2.hs  D3.hs  D4.hs
src/Y2017/: D1.hs  D2.hs  D3.hs  D4.hs
src/Y2018/: D1.hs  D2.hs  D3.hs  D4.hs
src/Y2019/: D1.hs  D2.hs  D3.hs  D4.hs
src/Y2020/: D1.hs  D2.hs  D3.hs  D4.hs
src/Y2021/: D1.hs  D2.hs  D3.hs  D4.hs
src/Y2022/: D1.hs  D2.hs  D3.hs
src/Y2023/: D1.hs  D10.hs  D11.hs  D12.hs  D2.hs  D3.hs  D4.hs  D5.hs  D6.hs  D7.hs  D8.hs  D9.hs
src/Y2024/: D17.hs
src/Y2025/: D1.hs  D10.hs  D11.hs  D12.hs  D2.hs  D3.hs  D4.hs  D5.hs  D6.hs  D7.hs  D8.hs  D9.hs
